<resources>
    <string name="app_name">VerdeFoodChallenge</string>
    <string name="about_info">
        This app is one of the many Green Food Challenge apps created for CMPT 276 Fall 2018.
        This app aims to help residents of Metro Vancouver collectively reduce green house gas emissions by changing their diet.\n
\n
        Many necessities for living nowadays produce greenhouse gases,
        a significant type of which are classified as Carbon Dioxide eqivalents (CO2e).\n
\n
        Food is generally under-reported as a source of CO2e. For instance in Europe,
        agriculture contributes to 10% of the total carbon footprint.
        In particular, some animals produce methane and therefore more CO2e than other animals.\n
\n
        In this app, people will learn how much their diet produces in terms of CO2e,
        and discover how much CO2e they could save by exploring new options.\n
\n
        This app will be developed in 3 phases:\n
        1. Green Food Challenge Carbon Calculator\n
        2. Green Food Challenge Group Pledge\n
        3. Green Food Challenge Restaurant Guide\n
\n
        The Development Team:\n
\n
            Jack Zhou - Scrum Master\n
            Weijie Sun - Product Owner\n
            Hewei Cao - Team Member\n
            Yijin Ma - Team Member\n
            Min-jun Lee - Repo Manager\n
    </string>
    <string name="title_activity_profile">buttom_menu</string>

    <string name="title_Food">Food</string>
    <string name="title_CO2e">CO2e</string>
    <string name="title_Suggestion">Suggestion</string>
    <string name="title_Community">Community</string>
    <string name="title_Me">Me</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="calculating_co2e">calculating_co2e</string>
    <string name="pledge">Let me pledge this change!</string>
    <string name="ret">return</string>
    <string name="calinfo">calinfo</string>
    <string name="make_a_difference">Let\'s make a difference!</string>
    <string name="kgperweek">kg/week</string>
    <string name="set">Set</string>
    <string name="green_food">Green Food</string>
    <string name="reset">Reset</string>
    <string name="suggest">Suggestion</string>
    <string name="result">Result</string>
    <string name="prompt">Select your approximate weekly intake for</string>
    <string name="default_food">Default</string>
    <string name="zero">0 kg</string>
    <string name="max_value50">50 kg</string>
    <string name="backarrow">◀ ----</string>
    <string name="forwardarrow">---- ▶</string>
    <string name="random">Random</string>
    <string name="splash">Welcome to \nGreen Food Challenge!</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string-array name="Locations">

        <item>All</item>
        <item>Vancouver</item>
        <item>Burnaby</item>
        <item>Coquitlam</item>
        <item>Surrey</item>
        <item>Richmond</item>
        <item>New Westminster</item>
        <item>Other</item>
    </string-array>
    <string-array name="Proteins">

        <item>All</item>
        <item>Meat</item>
        <item>Cheese</item>
        <item>Fish</item>
        <item>Eggs</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Nuts</item>
        <item>Tofu</item>
        <item>Other</item>
    </string-array>
    <string-array name="Proteins">

        <item>All</item>
        <item>Meat</item>
        <item>Cheese</item>
        <item>Fish</item>
        <item>Eggs</item>
        <item>Vegetables</item>
        <item>Fruits</item>
        <item>Nuts</item>
        <item>Tofu</item>
        <item>Other</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="about_us">About</string>
    <string name="Send">Send</string>
    <string name="log_in">Log in</string>
    <string name="Done">Done</string>
    <string name="Loading">Loading</string>
    <string name="Success">Success</string>
    <string name="Upload">Upload</string>
    <string name="Uploading">Uploading</string>
    <string name="appbar_scrolling_view_behavior">appbar_scrolling_view_behavior</string>



    <string name="meal_name">Meal Name</string>
    <string name="meal_protein">Main Protein…</string>
    <string name="meal_loc">Location of Restaurant…</string>
    <string name="mealrest_name">Restaurant Name…</string>
    <string name="meal_desc">Meal Description…</string>
    <string name="submit_meal">submit!</string>
    <string name="meal_img_upload_hint">Choose a picture</string>
    <string name="meal_img_camera_hint">Take a picture!</string>


    <string name="meal_name">Meal Name</string>
    <string name="meal_protein">Main Protein</string>
    <string name="meal_loc">Location of Restaurant</string>
    <string name="mealrest_name">Restaurant Name…</string>
    <string name="meal_desc">Meal Description…</string>
    <string name="submit_meal">submit!</string>
    <string name="meal_img_upload_hint">Choose a picture</string>
    <string name="meal_img_camera_hint">Take a picture!</string>



</resources>
