<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uploadMealActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ETmeal_name"
            android:singleLine="true"
            android:hint="@string/meal_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--most likely swapping this with a spinner-->
        <EditText
            android:id="@+id/ETmeal_protein"
            android:singleLine="true"
            android:hint="@string/meal_protein"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ETmealrest_name"
            android:singleLine="true"
            android:hint="@string/mealrest_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <!--most likely swapping this with a spinner-->
        <EditText
            android:id="@+id/ETmeal_loc"
            android:singleLine="true"
            android:hint="@string/meal_loc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <Button
                android:id="@+id/image_upload"
                android:text="@string/meal_img_upload_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/image_camera"
                android:text="@string/meal_img_camera_hint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <!--will need to look into how to dynamically scale the imageview-->
        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="200px" />
        <EditText
            android:id="@+id/ETmeal_desc"
            android:singleLine="true"
            android:hint="@string/meal_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/submit_meal"
            android:text="@string/submit_meal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>